p2/confs/pod2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
