p2/confs/pod3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: paulbouwer/hello-kubernetes:1.10
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    run: app-three
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: app-three
