p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cristina-and-adrien-the-future-admin-sys
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-one
              port:
                number: 8080
  - host: "app2.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-two
              port:
                number: 8080
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              number: 8080
